Learning.css
.u-section-1 {
  background-image: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.55),
      rgba(0, 0, 0, 0.55)
    ),
    url('./images/stock/grads_walking.jpg');
  background-position: 50% 50%;
}

.u-section-1 .u-sheet-1 {
  min-height: 671px;
}

.u-section-1 .u-text-1 {
  font-size: 6rem;
  font-weight: 700;
  --animation-custom_in-translate_x: 0px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 1;
  margin: 273px auto 0;
}

.u-section-1 .u-text-2 {
  width: 666px;
  --animation-custom_in-translate_x: 0px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 1;
  margin: 15px auto 60px;
}

@media (max-width: 1199px) {
  .u-section-1 .u-sheet-1 {
    min-height: 553px;
  }
}

@media (max-width: 991px) {
  .u-section-1 .u-sheet-1 {
    min-height: 424px;
  }
}

@media (max-width: 767px) {
  .u-section-1 .u-sheet-1 {
    min-height: 318px;
  }

  .u-section-1 .u-text-2 {
    width: 540px;
  }
}

@media (max-width: 575px) {
  .u-section-1 .u-sheet-1 {
    min-height: 200px;
  }

  .u-section-1 .u-text-1 {
    font-size: 3.75rem;
  }

  .u-section-1 .u-text-2 {
    width: 340px;
  }
}
.u-section-2 {
  background-image: none;
}

.u-section-2 .u-sheet-1 {
  min-height: 1490px;
}

.u-section-2 .u-text-1 {
  font-size: 3rem;
  font-family: 'Open Sans', sans-serif;
  margin: 57px auto 0 308px;
}

.u-section-2 .u-layout-wrap-1 {
  width: 960px;
  margin: 45px auto 0 90px;
}

.u-section-2 .u-layout-cell-1 {
  min-height: 328px;
}

.u-section-2 .u-container-layout-1 {
  padding: 20px;
}

.u-section-2 .embed-responsive-1 {
  position: absolute;
  width: 178%;
  left: -39%;
  height: 178%;
  top: -39%;
}

.u-section-2 .embed-responsive-2 {
  position: absolute;
  width: 178%;
  left: -39%;
  height: 178%;
  top: -39%;
}

.u-section-2 .u-video-3 {
  min-height: 328px;
}

.u-section-2 .u-container-layout-2 {
  padding: 30px;
}

.u-section-2 .embed-responsive-3 {
  position: absolute;
}

.u-section-2 .u-layout-cell-3 {
  min-height: 328px;
}

.u-section-2 .u-container-layout-3 {
  padding: 20px;
}

.u-section-2 .embed-responsive-4 {
  position: absolute;
  width: 178%;
  left: -39%;
  height: 178%;
  top: -39%;
}

.u-section-2 .u-list-1 {
  width: 930px;
  margin: 25px auto 0 105px;
}

.u-section-2 .u-repeater-1 {
  min-height: 97px;
  grid-template-columns: calc(33.3333% - 39.3333px) calc(33.3333% - 39.3333px) calc(
      33.3333% - 39.3333px
    );
  grid-gap: 59px 59px;
}

.u-section-2 .u-container-layout-4 {
  padding: 10px;
}

.u-section-2 .u-text-2 {
  font-size: 1.125rem;
  margin: 0 auto;
}

.u-section-2 .u-container-layout-5 {
  padding: 10px;
}

.u-section-2 .u-text-3 {
  font-size: 1.125rem;
  margin: 0 auto;
}

.u-section-2 .u-container-layout-6 {
  padding: 10px;
}

.u-section-2 .u-text-4 {
  font-size: 1.125rem;
  margin: 0 auto;
}

.u-section-2 .u-btn-1 {
  border-style: none;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 0.875rem;
  letter-spacing: 1px;
  margin: 12px auto 0 386px;
}

.u-section-2 .u-text-5 {
  font-size: 3rem;
  font-family: 'Open Sans', sans-serif;
  width: 858px;
  margin: 52px auto 0;
}

.u-section-2 .u-text-6 {
  font-size: 1.25rem;
  margin: 12px 118px 0 119px;
}

.u-section-2 .u-btn-2 {
  background-image: none;
  padding: 0;
}

.u-section-2 .u-custom-html-1 {
  min-height: 632px;
  margin: 20px 570px 0 106px;
}

.u-section-2 .u-image-1 {
  width: 440px;
  height: 357px;
  box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.4);
  margin: -588px 90px 0 auto;
}

.u-section-2 .u-text-7 {
  font-size: 1.25rem;
  margin: 20px 110px 60px 630px;
}

@media (max-width: 1199px) {
  .u-section-2 .u-layout-wrap-1 {
    width: 940px;
    margin-left: 0;
  }

  .u-section-2 .u-layout-cell-1 {
    min-height: 321px;
  }

  .u-section-2 .u-layout-cell-3 {
    min-height: 321px;
  }

  .u-section-2 .u-list-1 {
    margin-left: 10px;
  }

  .u-section-2 .u-btn-1 {
    margin-left: 186px;
  }

  .u-section-2 .u-text-5 {
    margin-left: 382px;
  }

  .u-section-2 .u-text-6 {
    width: 903px;
    margin-left: 19px;
    margin-right: 18px;
  }

  .u-section-2 .u-custom-html-1 {
    height: auto;
    margin-right: 470px;
    margin-left: 6px;
  }

  .u-section-2 .u-text-7 {
    width: 903px;
    margin-right: 10px;
    margin-left: 530px;
  }
}

@media (max-width: 991px) {
  .u-section-2 .u-text-1 {
    margin-left: 236px;
  }

  .u-section-2 .u-layout-wrap-1 {
    width: 720px;
  }

  .u-section-2 .u-layout-cell-1 {
    min-height: 246px;
  }

  .u-section-2 .u-container-layout-1 {
    padding-left: 30px;
    padding-right: 30px;
  }

  .u-section-2 .u-layout-cell-3 {
    min-height: 246px;
  }

  .u-section-2 .u-container-layout-3 {
    padding-left: 30px;
    padding-right: 30px;
  }

  .u-section-2 .u-list-1 {
    width: 720px;
    margin-left: 0;
  }

  .u-section-2 .u-repeater-1 {
    min-height: 225px;
    grid-template-columns: calc(50% - 29.5px) calc(50% - 29.5px);
  }

  .u-section-2 .u-btn-1 {
    margin-left: 0;
  }

  .u-section-2 .u-text-5 {
    margin-left: 293px;
    width: 720px;
  }

  .u-section-2 .u-text-6 {
    width: 720px;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-2 .u-custom-html-1 {
    margin-right: 256px;
    margin-left: 0;
  }

  .u-section-2 .u-text-7 {
    width: 720px;
    margin-right: 0;
    margin-left: 320px;
  }
}

@media (max-width: 767px) {
  .u-section-2 .u-sheet-1 {
    min-height: 2270px;
  }

  .u-section-2 .u-text-1 {
    margin-left: 177px;
  }

  .u-section-2 .u-layout-wrap-1 {
    width: 540px;
  }

  .u-section-2 .u-layout-cell-1 {
    min-height: 554px;
  }

  .u-section-2 .u-container-layout-1 {
    padding-left: 10px;
    padding-right: 10px;
  }

  .u-section-2 .u-container-layout-2 {
    padding-left: 10px;
    padding-right: 10px;
  }

  .u-section-2 .u-layout-cell-3 {
    min-height: 554px;
  }

  .u-section-2 .u-container-layout-3 {
    padding-left: 10px;
    padding-right: 10px;
  }

  .u-section-2 .u-list-1 {
    width: 540px;
  }

  .u-section-2 .u-repeater-1 {
    grid-template-columns: 100%;
  }

  .u-section-2 .u-text-5 {
    margin-left: 220px;
    width: 540px;
  }

  .u-section-2 .u-text-6 {
    width: 540px;
  }

  .u-section-2 .u-custom-html-1 {
    margin-right: 76px;
  }

  .u-section-2 .u-text-7 {
    width: 540px;
    margin-left: 140px;
  }
}

@media (max-width: 575px) {
  .u-section-2 .u-sheet-1 {
    min-height: 1779px;
  }

  .u-section-2 .u-text-1 {
    font-size: 1.5rem;
    margin-left: 111px;
  }

  .u-section-2 .u-layout-wrap-1 {
    width: 340px;
  }

  .u-section-2 .u-layout-cell-1 {
    min-height: 349px;
  }

  .u-section-2 .u-layout-cell-3 {
    min-height: 349px;
  }

  .u-section-2 .u-list-1 {
    width: 340px;
  }

  .u-section-2 .u-text-5 {
    font-size: 1.5rem;
    margin-left: 139px;
    width: 340px;
  }

  .u-section-2 .u-text-6 {
    width: 340px;
  }

  .u-section-2 .u-custom-html-1 {
    margin-right: 0;
  }

  .u-section-2 .u-image-1 {
    width: 340px;
    height: 276px;
    margin-right: 0;
  }

  .u-section-2 .u-text-7 {
    width: 340px;
    margin-left: 0;
  }
}
.u-section-3 .u-sheet-1 {
  min-height: 254px;
}

.u-section-3 .u-text-1 {
  font-size: 3rem;
  margin: 81px auto 0;
}

.u-section-3 .u-btn-1 {
  border-style: solid;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 0.875rem;
  letter-spacing: 1px;
  margin: 23px auto 45px;
  padding: 10px 30px 12px 29px;
}

@media (max-width: 1199px) {
  .u-section-3 .u-text-1 {
    font-family: Roboto, sans-serif;
  }
}

@media (max-width: 575px) {
  .u-section-3 .u-text-1 {
    font-size: 1.5rem;
  }
}

